# ps_cc_2021

./: README.md  evaluation_scheme.md  specification.md
examples/agecontrol/: agecontrol.mc  agecontrol.stdout.txt
examples/binary_search/: binary_search.mc
examples/dangling_else/: dangling_else.mc
examples/dijkstra/: dijkstra.mc  dijkstra.stdin.txt  dijkstra.stdout.txt
examples/draw/: draw.mc
examples/euclid/: euclid.mc  euclid.stdin.txt  euclid.stdout.txt
examples/euclidean_division/: euclidean_division.mc  euclidean_division.stdout.txt
examples/factorial/: factorial.mc  factorial.stdout.txt
examples/fem/: fem.mc  fem.stdout.txt
examples/flw/: flw.mc  flw.stdin.txt  flw.stdout.txt
examples/gcd/: gcd.mc  gcd.stdout.txt
examples/intToBin/: intToBin.mc  intToBin.stdin.txt  intToBin.stdout.txt
examples/is_square/: is_square.mc  is_square.stdout.txt
examples/leap_year/: leap_year.mc
examples/leibniz_pi/: leibniz_pi.mc  leibniz_pi.stdout.txt
examples/lucas_number/: lucas_number.mc
examples/mandelbrot/: mandelbrot.mc
examples/nim/: nim.mc  (+2 more)
images/: cfg.dot  fib_ast.dot
mcc/: .clang-format  .editorconfig  .gitlab-ci.yml  README.md  meson.build
mcc/app/: mc_ast_to_dot.c  mc_lex.c  mcc.c
mcc/docs/: development_notes.md
mcc/include/mcc/: ast.h  ast_print.h  ast_visit.h  lexer.h  parser.h  sloc.h
mcc/resources/: mc_builtins.c
mcc/scripts/: mc_to_c  mcc_stub
mcc/src/: ast.c  ast_print.c  ast_visit.c  lexer.c  parser.c
mcc/test/integration/fib/: fib.mc
mcc/test/unit/: main_stub.inc  parser_test.c
slides/: Makefile  intro_slides.md
(+25 files in other folders)
